fix annoying scrollbar appear on link click error

--- a/css/main.css
+++ b/css/main.css
@@ -13,16 +13,10 @@
   margin: 0;
   padding: 0;
 }
-html {
-  min-height: 100vh;
-  min-width: 100vw;
-}
 body {
   background: #ffffff url('../images/background.jpg') no-repeat center center
     fixed;
   background-size: cover;
-  min-height: 100vh;
-  min-width: 100vw;
 }
 a {
   color: inherit;
